Style edits; minor fixes

--- a/docs/getting-started/04_changelog/85_3-15/3-15.md
+++ b/docs/getting-started/04_changelog/85_3-15/3-15.md
@@ -77,6 +77,21 @@
 >
 > Added new [Glue42 Window events](../../../glue42-concepts/windows/window-management/java/index.html#window_events) for the Java API. You can now subscribe for changes to the window [title](../../../glue42-concepts/windows/window-management/java/index.html#window_events-title), [bounds](../../../glue42-concepts/windows/window-management/java/index.html#window_events-size__position), [visibility](../../../glue42-concepts/windows/window-management/java/index.html#window_events-visibility) and [focus](../../../glue42-concepts/windows/window-management/java/index.html#window_events-focus).
 
+> ### Preload Scripts
+>
+> [Preload scripts](../../../glue42-concepts/glue42-platform-features/index.html#preload_scripts) can now be defined globally in the `system.json` file of [**Glue42 Enterprise**](https://glue42.com/enterprise/):
+>
+> ```json
+> {
+>     "windows": {
+>         "preloadScripts": [
+>             "https://my-domain.com/my-script.js",
+>             "https://my-domain.com/my-other-script.js"
+>         ]
+>     }
+> }
+> ```
+
 > ### C Exports Library
 >
 > Added documentation about the Glue42 C Exports library which offers access for native apps to Glue42 functionalities via exported C functions:
