--- a/docs/getting-started/04_changelog/87_3-13-1/3-13-1.md
+++ b/docs/getting-started/04_changelog/87_3-13-1/3-13-1.md
@@ -4,11 +4,13 @@
 
 <glue42 name="addClass" class="breakingChanges" element="p" text="Breaking Changes">
 
+> ### Overriding Configurations
+>
 > When overriding Glue42 [configurations](../../../developers/configuration/overview/index.html) (e.g., running [**Glue42 Enterprise**](https://glue42.com/enterprise/) in different environments/regions, the values of the settings which accept an array are now replaced instead of merged.
 >
 > The following examples demonstrate the new and the old behavior when using the `"appStores"` top-level array.
 >
-> In the `system.json` file `"appStores"` is used to define application stores for a production environemnt. In the `system-DEV.json` file, the same property is used to define an override configuration for the app stores in a development environment:
+> In the `system.json` file `"appStores"` is used to define application stores for a production environment. In the `system-DEV.json` file, the same property is used to define an override configuration for the app stores in a development environment:
 >
 > ```json
 > // App stores in `system.json`:
@@ -98,12 +100,16 @@
 
 <glue42 name="addClass" class="newFeatures" element="p" text="New Features">
 
+> ### Bootstrapped Apps
+>
 > .NET support for applications [started by a bootstrapping launcher application](../../../glue42-concepts/application-management/net/index.html#bootstrapped_apps).
 
+> ### Debugging Apps
+>
 > Added documentation for [debugging applications](../../../developers/debugging-your-app/index.html) running in [**Glue42 Enterprise**](https://glue42.com/enterprise/).
 
 <glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes">
 
-> Improvements related to supporting Glue42 and FDC3 application definitions for [Remote App Stores](../../../glue42-concepts/application-management/overview/index.html#application_stores-remote_app_stores).
-
-> Minor improvements and bugfixes.
+> - Improvements related to supporting Glue42 and FDC3 application definitions for [Remote App Stores](../../../glue42-concepts/application-management/overview/index.html#application_stores-remote_app_stores).
+>
+> - Minor improvements and bugfixes.
