--- a/docs/getting-started/04_changelog/88_3-13/3-13.md
+++ b/docs/getting-started/04_changelog/88_3-13/3-13.md
@@ -4,21 +4,31 @@
 
 <glue42 name="addClass" class="breakingChanges" element="p" text="Breaking Changes">
 
-> Due to updating [**Glue42 Enterprise**](https://glue42.com/enterprise/) to Electron 13 and Chromium 91, and increasing product security, clients which have implemented custom [splash screens](../../how-to/rebrand-glue42/user-interface/index.html#splash_screen) or custom [loaders](../../how-to/rebrand-glue42/user-interface/index.html#loaders) must edit the splash/loader code as shown in the following example, in order for the custom splash screens and custom loaders to continue working properly:
+> ### Custom Splash Screen & Loaders
+>
+> Due to upgrading [**Glue42 Enterprise**](https://glue42.com/enterprise/) to Electron 13 (Chromium 91), and increasing product security, clients which have implemented custom [splash screens](../../how-to/rebrand-glue42/user-interface/index.html#splash_screen) or custom [loaders](../../how-to/rebrand-glue42/user-interface/index.html#loaders) must edit the splash/loader code as shown in the following example, in order for the custom splash screens and custom loaders to continue working properly:
 >
 > ```javascript
 > // Delete this constant declaration from the splash/loader code.
 > const { ipcRenderer } = require("electron");
 > ```
 
-> Due to updating to Electron 13 and Chromium 91, the Flash plugin is no longer supported.
+> ### Flash Plugin
+>
+> Due to upgrading to Electron 13 (Chromium 91), the Flash plugin is no longer supported.
 
 <glue42 name="addClass" class="newFeatures" element="p" text="New Features">
 
+> ### Maximize & Restore Workspace Containers
+>
 > Workspace containers ([`Box`](../../../reference/glue/latest/workspaces/index.html#Box), [`Column`](../../../reference/glue/latest/workspaces/index.html#Column), [`Row`](../../../reference/glue/latest/workspaces/index.html#Row), [`Group`](../../../reference/glue/latest/workspaces/index.html#Group), [`WorkspaceWindow`](../../../reference/glue/latest/workspaces/index.html#WorkspaceWindow)) can now be [maximized and restored](../../../glue42-concepts/windows/workspaces/javascript/index.html#workspace-manipulating_workspace_elements-maximize_and_restore) programmatically within the bounds of the Workspace through the `maximize()` and `restore()` methods of their instances.
 
+> ### Workspaces App Move Area
+>
 > Added a `<MoveArea />` component to the [`@glue42/workspaces-ui-react`](https://www.npmjs.com/package/@glue42/workspaces-ui-react) library that can be used to relocate the Workspaces App [move area](../../../glue42-concepts/windows/workspaces/overview/index.html#extending_workspaces-header_area_components-move_area).
 
+> ### Preload Scripts
+>
 > [Preload scripts](../../../glue42-concepts/glue42-platform-features/index.html#preload_scripts) can now be specified through the [application configuration](../../../developers/configuration/application/index.html) file. The preload scripts will be executed before the actual web app is loaded. Use the `"preloadScripts"` array of the `"details"` top-level key in the application configuration file, provide URLs to the scripts, and they will be executed in the specified order:
 >
 > ```json
@@ -32,6 +42,8 @@
 > }
 > ```
 
+> ### Downloading Files Programmatically
+>
 > Added a [`download()`](../../../reference/glue/latest/windows/index.html#GDWindow-download) method to the Glue42 Window instance for [downloading files](../../../glue42-concepts/windows/window-management/javascript/index.html#window_operations-download):
 >
 > ```javascript
@@ -47,6 +59,8 @@
 > console.log(`Download path: ${path}, File size: ${size}, URL: ${url}`);
 > ```
 
+> ### Event for Display Changes
+>
 > Added an [`onDisplayChanged()`](../../../reference/glue/latest/displays/index.html#API-onDisplayChanged) method to the [Displays API](../../../glue42-concepts/glue42-platform-features/index.html#displays) for capturing the [event that fires when a display has been modified](../../../glue42-concepts/glue42-platform-features/index.html#displays-displays_api-events):
 >
 > ```javascript
@@ -58,8 +72,12 @@
 > glue.displays.onDisplayChanged(handler);
 > ```
 
+> ### Opening URLs in the Default Browser
+>
 > Added a predefined app which [opens a URL in the default browser](../../../glue42-concepts/glue42-platform-features/index.html#opening_urls_in_the_default_browser).
 
+> ### Accessing OS Info
+>
 > It is now possible to allow applications to [access OS information](../../../glue42-concepts/glue42-platform-features/index.html#accessing_os_info) (list of running processes, OS version, Glue42 start time) through their [application configuration](../../../developers/configuration/application/index.html). Set the `"allowOSInfo"` property to `true` in the `"details"` top-level key to allow an app to access OS information:
 >
 > ```json
@@ -70,8 +88,10 @@
 > }
 > ```
 
+> ### Glue42 Server Commands
+>
 > Added a new command to the [Glue42 Server](../../../glue42-concepts/glue42-server/index.html) for stopping applications in a user session.
 
 <glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes">
 
-> Upgraded to Electron 13 and Chromium 91.
+> - Upgraded to Electron 13 (Chromium 91).
