--- a/docs/getting-started/04_changelog/92_3-10/3-10.md
+++ b/docs/getting-started/04_changelog/92_3-10/3-10.md
@@ -4,7 +4,7 @@
 
 <glue42 name="addClass" class="breakingChanges" element="p" text="Breaking Changes">
 
-> **Context Merging**
+> ### Context Merging
 >
 > Changed the mechanism of merging context data objects (used in [Shared Contexts](../../../glue42-concepts/data-sharing-between-apps/shared-contexts/overview/index.html), [Channels](../../../glue42-concepts/data-sharing-between-apps/channels/overview/index.html)). When updating a context object, the new and the old values of its first level properties (e.g., the value of `a` in `{ a: { b: 0 } }`) are no longer merged, but the new value replaces the old value. For further clarification, see the examples below:
 >
@@ -29,7 +29,7 @@
 > - [Glue42 .NET 2018.2128.0](https://www.nuget.org/packages/Glue42/)
 > - Glue42 Java 1.3.9
 
-> **Storing Data in the Application Default Layout**
+> ### Storing Data in the Application Default Layout
 >
 > Added support for saving custom context data in the Application Default layout using the [`onSaveRequested()`](../../../reference/glue/latest/layouts/index.html#API-onSaveRequested) method of the Layouts API.
 >
@@ -56,10 +56,14 @@
 
 <glue42 name="addClass" class="newFeatures" element="p" text="New Features">
 
+> ### Workspaces
+>
 > [Workspaces](../../../glue42-concepts/windows/workspaces/overview/index.html) functionality and [Workspaces API](../../../reference/glue/latest/workspaces/index.html) added.
 >
 > ![Workspaces](../../../images/workspaces/workspaces.gif)
 
+> ### Glue42 Themes
+>
 > New default dark and light [Glue42 themes](../../../glue42-concepts/windows/themes/overview/index.html).
 >
 > *Click on the image and use the slider to see the differences between the new and the old Glue42 **Day** themes.*
@@ -70,42 +74,72 @@
 >
 > <glue42 name="slider" top="../../../images/changelog/new-dark.png" bottom="../../../images/changelog/old-dark.png">
 
-> New [Themes](../../../glue42-concepts/windows/themes/javascript/index.html) JavaScript API.
+> ### Performance Metrics
+>
+> New [Performance Metrics](../../../glue42-concepts/metrics/overview/index.html#generation-performance_metrics) added.
 
-> New methods for joining/leaving [Channels](../../../glue42-concepts/data-sharing-between-apps/channels/javascript/index.html) programmatically, subscribing for a specific Channel and managing Channel context in the Channels JavaScript API.
-
-> New [Performance Metrics](../../../glue42-concepts/metrics/overview/index.html#generation-performance_metrics).
-
+> ### Storing Custom Data in App Default Layout
+>
 > Applications can now [store custom data](../../../glue42-concepts/windows/layouts/javascript/index.html#saving_and_updating_context) in the [Application Default layout](../../../glue42-concepts/windows/layouts/overview/index.html).
 
+> ### Window Title Format
+>
 > The [title format](../../../developers/configuration/system/index.html#application_settings) of Glue42 Windows can now be set through system configuration.
 
+> ### Grouping Apps
+>
 > Applications can now be [grouped in folders and subfolders](../../../developers/configuration/application/index.html#grouping_applications) in the Application Manager of the Glue42 Toolbar.
 
+> ### Extending System Configuration
+>
 > The [**Glue42 Enterprise**](https://glue42.com/enterprise/) system configuration can now be extended with custom configuration from a REST service.
 
+> ### Browser window.open()
+>
 > The native browser `window.open()` call can now open browser windows or Glue42 Windows, or can be entirely disabled based on [system configuration](../../../glue42-concepts/windows/window-management/javascript/index.html#opening_windows-handling_the_browser_windowopen).
 
+> ### JavaScript Themes API
+>
+> New [Themes](../../../glue42-concepts/windows/themes/javascript/index.html) JavaScript API.
+
+> ### JavaScript Joining & Leaving Channels
+>
+> New methods for joining/leaving [Channels](../../../glue42-concepts/data-sharing-between-apps/channels/javascript/index.html) programmatically, subscribing for a specific Channel and managing Channel context in the Channels JavaScript API.
+
+> ### Java App Shutdown Event
+>
 > Added event listener for [Application Shutdown](../../how-to/glue42-enable-your-app/java/index.html#referencing_and_initialization-application_shutdown) to the Java API.
 
-> VBA documentation added - [Glue42 Enable Your App](../../how-to/glue42-enable-your-app/vba/index.html), [Interop](../../../glue42-concepts/data-sharing-between-apps/interop/vba/index.html), [Shared Contexts](../../../glue42-concepts/data-sharing-between-apps/shared-contexts/vba/index.html), [Channels](../../../glue42-concepts/data-sharing-between-apps/channels/vba/index.html), [Window Management](../../../glue42-concepts/windows/window-management/vba/index.html), [VBA Reference](../../how-to/glue42-enable-your-app/vba/index.html#comvba_reference).
+> ### VBA Documentation
+>
+> Added VBA documentation:
+> - [Glue42 Enable Your App](../../how-to/glue42-enable-your-app/vba/index.html)
+> - [Interop](../../../glue42-concepts/data-sharing-between-apps/interop/vba/index.html)
+> - [Shared Contexts](../../../glue42-concepts/data-sharing-between-apps/shared-contexts/vba/index.html)
+> - [Channels](../../../glue42-concepts/data-sharing-between-apps/channels/vba/index.html)
+> - [Window Management](../../../glue42-concepts/windows/window-management/vba/index.html)
+> - [VBA Reference](../../how-to/glue42-enable-your-app/vba/index.html#comvba_reference)
 
 <glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes">
 
-> [**Glue42 Enterprise**](https://glue42.com/enterprise/) upgraded with Electron 9.
-
-> The Glue42 Gateway can now be [configured to connect to a random free port](../../../developers/configuration/system/index.html#dynamic_gateway_port) on startup.
-
-> Improvements in the [Intents API](../../../reference/glue/latest/intents/index.html) related to better handling raised Intents.
-
-> Improvements related to the design of the download bar for [downloading files](../../../glue42-concepts/glue42-platform-features/index.html#downloading_files) in Glue42 windows.
-
-> [**Glue42 Enterprise**](https://glue42.com/enterprise/) now reads [Intents](../../fdc3-compliance/index.html#fdc3_for_glue42_enterprise-intents) also from the FDC3 wrapper configuration.
+> - Upgraded to Electron 9.
+>
+> - The Glue42 Gateway can now be [configured to connect to a random free port](../../../developers/configuration/system/index.html#dynamic_gateway_port) on startup.
+>
+> - Improvements in the [Intents API](../../../reference/glue/latest/intents/index.html) related to better handling raised Intents.
+>
+> - Improvements related to the design of the download bar for [downloading files](../../../glue42-concepts/glue42-platform-features/index.html#downloading_files) in Glue42 windows.
+>
+> - [**Glue42 Enterprise**](https://glue42.com/enterprise/) now reads [Intents](../../fdc3-compliance/index.html#fdc3_for_glue42_enterprise-intents) also from the FDC3 wrapper configuration.
 
 ## Glue42 Connectors
 
 <glue42 name="addClass" class="newFeatures" element="p" text="New Features">
 
-> [Salesforce Connector](../../../connectors/salesforce-connector/overview/index.html) documentation added.
-
+> ### Fidessa Connector
+>
 > [Fidessa Connector](../../../connectors/fidessa-connector/overview/index.html) added (shipped separately from the trial installer, [contact us](https://glue42.com/contacts/) for more information).
+
+> ### Salesforce Connector Documentation
+>
+> [Salesforce Connector](../../../connectors/salesforce-connector/overview/index.html) documentation added.
