--- a/docs/getting-started/04_changelog/90_3-12/3-12.md
+++ b/docs/getting-started/04_changelog/90_3-12/3-12.md
@@ -4,18 +4,26 @@
 
 <glue42 name="addClass" class="newFeatures" element="p" text="New Features">
 
+> ### Global Search
+>
 > [Global Search](../../../glue42-concepts/global-search/index.html) - a search bar that is globally accessible (through a configurable keyboard shortcut) allowing users to search for system (applications, Layouts, Workspaces) or custom entities made available by custom search providers (e.g., Clients, Instruments, etc.).
 >
 > ![Global Search](../../../images/search/global-search-usage.gif)
 
+> ### Launchpad
+>
 > [Launchpad](../../../glue42-concepts/glue42-toolbar/index.html#launchpad) - a new option for a Glue42 Toolbar. The Launchpad is a toolbar in the style of the Windows Start menu and is hidden by default. Users can open it via a configurable shortcut.
 >
 > ![Launchpad](../../../images/toolbar/launchpad.gif)
 
+> ### Glue42 Server
+>
 > [Glue42 Server](../../../glue42-concepts/glue42-server/index.html) - a server-side application that provides data to Glue42 (applications, Layouts, application preferences) and allows monitoring and interacting with users running Glue42. It also includes an Admin UI that helps managing the data stored in the Glue42 Server easier.
 >
 > <glue42 name="diagram" image="../../../images/server/server-architecture.png">
 
+> ### Global Protocol Handler
+>
 > [Global Protocol Handler](../../../glue42-concepts/glue42-platform-features/index.html#global_protocol_handler) - Glue42 will now register itself as the default handler for the `glue42://` protocol, meaning any link that starts with this scheme will be opened in Glue42. This allows users or applications to create links that will execute different Glue42 actions (e.g., starting applications, restoring Layouts, etc.) when clicked. Those links can be shared between users in chat, emails, web pages.
 >
 > ```cmd
@@ -29,27 +37,56 @@
 > glue42://workspace/StartOfDay
 > ```
 
+> ### Citrix Apps
+>
 > Experimental support for [Citrix Virtual Apps](../../../glue42-concepts/glue42-platform-features/index.html#citrix_applications). Citrix applications can participate in the Glue42 environment as first-class citizens and use all Glue42 functionalities like Interop, Channels, etc. For more details, see also how to [configure a Citrix app](../../../developers/configuration/application/index.html#application_configuration-citrix_app) and [modify the system-wide Citrix configuration](../../../developers/configuration/system/index.html#citrix_apps).
 
-> Workspaces extensions:
+> ### Workspaces
 >
-> - [Hibernation](../../../glue42-concepts/windows/workspaces/overview/index.html#extending_workspaces-workspaces_app_configuration-hibernation) - hibernate and resume Workspaces based on configurable rules to save system resources and improve performance;
-> - [Loading Strategies](../../../glue42-concepts/windows/workspaces/overview/index.html#extending_workspaces-workspaces_app_configuration-loading_strategies) - load apps in Workspaces using different strategies to improve performance and UX;
-> - [Lockdown](../../../glue42-concepts/windows/workspaces/javascript/index.html#workspace-lockdown) - prevent the users from modifying a Workspace or some of its elements;
-> - [Size Constraints](../../../glue42-concepts/windows/workspaces/javascript/index.html#workspace-size_constraints) - set constraints for Workspace elements and create pinned elements - elements that will preserve their width (columns) or height (rows) when the user resizes the Workspace;
+> New Workspaces functionalities and API features.
+>
+> #### Hibernation
+>
+> [Hibernate and resume](../../../glue42-concepts/windows/workspaces/overview/index.html#extending_workspaces-workspaces_app_configuration-hibernation) Workspaces based on configurable rules to save system resources and improve performance.
+>
+> #### Loading Strategies
+>
+> [Load apps](../../../glue42-concepts/windows/workspaces/overview/index.html#extending_workspaces-workspaces_app_configuration-loading_strategies) in Workspaces using different strategies to improve performance and UX.
+>
+> #### Lockdown
+>
+> [Lockdown](../../../glue42-concepts/windows/workspaces/javascript/index.html#workspace-lockdown) a Workspace or some of its elements to prevent the users from modifying them.
+>
+> #### Size Constraints
+>
+> [Set constraints](../../../glue42-concepts/windows/workspaces/javascript/index.html#workspace-size_constraints) for Workspace elements and create pinned elements - elements that will preserve their width (columns) or height (rows) when the user resizes the Workspace.
 
-> JavaScript [Application Preferences API](../../../glue42-concepts/application-preferences/javascript/index.html) - manage (store and retrieve) programmatically user preferences for applications.
+> ### Application Preferences
+>
+> Added a JavaScript [Application Preferences API](../../../glue42-concepts/application-preferences/javascript/index.html) - manage (store and retrieve) programmatically user preferences for applications.
 
-> JavaScript [Managing App Definitions at Runtime](../../../glue42-concepts/application-management/javascript/index.html#managing_application_definitions_at_runtime) - import, export, remove or clear application definitions from an in-memory store at runtime.
+> ### JavaScript Managing App Definitions at Runtime
+>
+> [Manage app definitions at runtime](../../../glue42-concepts/application-management/javascript/index.html#managing_application_definitions_at_runtime) - import, export, remove or clear application definitions from an in-memory store at runtime.
 
-> Java [Multi Window support](../../../glue42-concepts/application-management/java/index.html#multi_window_apps) - support for Java apps consisting of multiple windows.
+> ### Java Multi Window Support
+>
+> Added [multi window support](../../../glue42-concepts/application-management/java/index.html#multi_window_apps) for Java apps.
 
-> Java [Intents API](../../../glue42-concepts/intents/java/index.html) - Java support for Intents.
+> ### Java Intents API
+>
+> Added a Java [Intents API](../../../glue42-concepts/intents/java/index.html).
 
-> .NET [Intents API](../../../glue42-concepts/intents/net/index.html) - .NET support for Intents.
+> ### .NET Intents API
+>
+> Added a .NET [Intents API](../../../glue42-concepts/intents/net/index.html).
 
-> .NET [Pub/Sub API](../../../glue42-concepts/data-sharing-between-apps/pub-sub/net/index.html) - .NET support for Pub/Sub.
+> ### .NET Pub/Sub API
+>
+> Added a .NET [Pub/Sub API](../../../glue42-concepts/data-sharing-between-apps/pub-sub/net/index.html).
 
+> ### App Shortcut
+>
 > Added a `"shortcut"` top-level key to the [application configuration](../../../developers/configuration/application/index.html) that you can use to define a keyboard shortcut for your app. When the user presses the shortcut, the app will start or will be focused.
 >
 > ```json
@@ -60,6 +97,8 @@
 > }
 > ```
 
+> ### Themes
+>
 > Added an `"icon"` property to the `"group"` key in the [Themes](../../../developers/configuration/themes/index.html#theme_properties-window_groups) configuration file which can be used for specifying a taskbar icon for Glue42 Window groups.
 >
 > ```json
@@ -72,10 +111,10 @@
 
 <glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes">
 
-> Upgraded to Electron 11 – Chromium 87.
-
-> Glue42 Java published to [Maven Central Repository](https://search.maven.org/search?q=g:com.glue42).
-
-> The [Channel Selector](../../../glue42-concepts/data-sharing-between-apps/channels/javascript/index.html#adding_channels_to_your_app) can now be set as read-only through configuration to prevent the users from changing the selected Channel manually, while the app can still join or leave Channels programmatically.
-
-> Authentication improvements - more options added to the login page: ability to pass authentication tokens that will be used when fetching data from REST services.
+> - Upgraded to Electron 11 (Chromium 87).
+>
+> - Glue42 Java published to [Maven Central Repository](https://search.maven.org/search?q=g:com.glue42).
+>
+> - The [Channel Selector](../../../glue42-concepts/data-sharing-between-apps/channels/javascript/index.html#adding_channels_to_your_app) can now be set as read-only through configuration to prevent the users from changing the selected Channel manually, while the app can still join or leave Channels programmatically.
+>
+> - Authentication improvements - more options added to the login page: ability to pass authentication tokens that will be used when fetching data from REST services.
