Updated App & Layout Stores sections.

--- a/docs/getting-started/04_changelog/85_3-15/3-15.md
+++ b/docs/getting-started/04_changelog/85_3-15/3-15.md
@@ -25,7 +25,7 @@
 >
 > ![Frameless Window](../../../images/window-management/window-mode-frameless.gif)
 >
-> [Configuring](../../../developers/configuration/application/index.html#application_configuration-frameless_window) a frameless window:
+> [Configuring](../../../developers/configuration/application/index.html#app_configuration-frameless_window) a frameless window:
 >
 > ```json
 > {
@@ -97,7 +97,7 @@
 > Added documentation about the Glue42 C Exports library which offers access for native apps to Glue42 functionalities via exported C functions:
 >
 > - [Glue42 Enable Your App](../../how-to/glue42-enable-your-app/c-exports/index.html)
-> - [Application Management](../../../glue42-concepts/application-management/c-exports/index.html)
+> - [App Management](../../../glue42-concepts/application-management/c-exports/index.html)
 > - [Shared Contexts](../../../glue42-concepts/data-sharing-between-apps/shared-contexts/c-exports/index.html)
 > - [Channels](../../../glue42-concepts/data-sharing-between-apps/channels/c-exports/index.html)
 > - [Interop](../../../glue42-concepts/data-sharing-between-apps/interop/c-exports/index.html)
