--- a/docs/getting-started/04_changelog/86_3-14/3-14.md
+++ b/docs/getting-started/04_changelog/86_3-14/3-14.md
@@ -69,9 +69,9 @@
 
 > ### Node.js Versions
 >
-> Added support for [multiple Node.js versions](../../../developers/configuration/application/index.html#application_configuration-nodejs-using_different_nodejs_versions) for Node.js apps.
+> Added support for [multiple Node.js versions](../../../developers/configuration/application/index.html#app_configuration-nodejs-using_different_nodejs_versions) for Node.js apps.
 >
-> Use the `"nodeVersion"` property of the `"details"` top-level key in the [application configuration](../../../developers/configuration/application/index.html#application_configuration-nodejs) to specify a Node.js version:
+> Use the `"nodeVersion"` property of the `"details"` top-level key in the [application configuration](../../../developers/configuration/application/index.html#app_configuration-nodejs) to specify a Node.js version:
 >
 > ```json
 > {
@@ -83,9 +83,9 @@
 
 > ### Remote Node.js Apps
 >
-> Added support for [remote Node.js apps](../../../developers/configuration/application/index.html#application_configuration-nodejs-remote).
+> Added support for [remote Node.js apps](../../../developers/configuration/application/index.html#app_configuration-nodejs-remote).
 >
-> Use the `"remote"` property of the `"details"` top-level key in the [application configuration](../../../developers/configuration/application/index.html#application_configuration-nodejs):
+> Use the `"remote"` property of the `"details"` top-level key in the [application configuration](../../../developers/configuration/application/index.html#app_configuration-nodejs):
 >
 > ```json
 > {
@@ -111,7 +111,7 @@
 
 > ### Bypassing App Default Layout
 >
-> Using `SHIFT + click` to start an application from the Glue42 Toolbar will [bypass the last saved Application Default Layout](../../../glue42-concepts/windows/layouts/overview/index.html#bypassing_application_default_layouts) and will open the application window with the bounds specified in its configuration file.
+> Using `SHIFT + click` to start an application from the Glue42 Toolbar will [bypass the last saved App Default Layout](../../../glue42-concepts/windows/layouts/overview/index.html#bypassing_app_default_layouts) and will open the application window with the bounds specified in its configuration file.
 
 > ### Publishing Metrics with Kafka
 >
@@ -122,7 +122,7 @@
 > Added Delphi documentation:
 >
 > - [Glue42 Enable Your App](../../how-to/glue42-enable-your-app/delphi/index.html)
-> - [Application Management](../../../glue42-concepts/application-management/delphi/index.html)
+> - [App Management](../../../glue42-concepts/application-management/delphi/index.html)
 > - [Shared Contexts](../../../glue42-concepts/data-sharing-between-apps/shared-contexts/delphi/index.html)
 > - [Channels](../../../glue42-concepts/data-sharing-between-apps/channels/delphi/index.html)
 > - [Interop](../../../glue42-concepts/data-sharing-between-apps/interop/delphi/index.html)
