--- a/docs/getting-started/04_changelog/87_3-13-1/3-13-1.md
+++ b/docs/getting-started/04_changelog/87_3-13-1/3-13-1.md
@@ -10,7 +10,7 @@
 >
 > The following examples demonstrate the new and the old behavior when using the `"appStores"` top-level array.
 >
-> In the `system.json` file `"appStores"` is used to define application stores for a production environment. In the `system-DEV.json` file, the same property is used to define an override configuration for the app stores in a development environment:
+> In the `system.json` file `"appStores"` is used to define app stores for a production environment. In the `system-DEV.json` file, the same property is used to define an override configuration for the app stores in a development environment:
 >
 > ```json
 > // App stores in `system.json`:
@@ -110,6 +110,6 @@
 
 <glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes">
 
-> - Improvements related to supporting Glue42 and FDC3 application definitions for [Remote App Stores](../../../glue42-concepts/application-management/overview/index.html#application_stores-remote_app_stores).
+> - Improvements related to supporting Glue42 and FDC3 application definitions for [Remote App Stores](../../../glue42-concepts/application-management/overview/index.html#app_stores-remote).
 >
 > - Minor improvements and bugfixes.
