--- a/docs/getting-started/04_changelog/90_3-12/3-12.md
+++ b/docs/getting-started/04_changelog/90_3-12/3-12.md
@@ -39,7 +39,7 @@
 
 > ### Citrix Apps
 >
-> Experimental support for [Citrix Virtual Apps](../../../glue42-concepts/glue42-platform-features/index.html#citrix_applications). Citrix applications can participate in the Glue42 environment as first-class citizens and use all Glue42 functionalities like Interop, Channels, etc. For more details, see also how to [configure a Citrix app](../../../developers/configuration/application/index.html#application_configuration-citrix_app) and [modify the system-wide Citrix configuration](../../../developers/configuration/system/index.html#citrix_apps).
+> Experimental support for [Citrix Virtual Apps](../../../glue42-concepts/glue42-platform-features/index.html#citrix_applications). Citrix applications can participate in the Glue42 environment as first-class citizens and use all Glue42 functionalities like Interop, Channels, etc. For more details, see also how to [configure a Citrix app](../../../developers/configuration/application/index.html#app_configuration-citrix_app) and [modify the system-wide Citrix configuration](../../../developers/configuration/system/index.html#citrix_apps).
 
 > ### Workspaces
 >
@@ -61,9 +61,9 @@
 >
 > [Set constraints](../../../glue42-concepts/windows/workspaces/javascript/index.html#workspace-size_constraints) for Workspace elements and create pinned elements - elements that will preserve their width (columns) or height (rows) when the user resizes the Workspace.
 
-> ### Application Preferences
+> ### App Preferences
 >
-> Added a JavaScript [Application Preferences API](../../../glue42-concepts/application-preferences/javascript/index.html) - manage (store and retrieve) programmatically user preferences for applications.
+> Added a JavaScript [App Preferences API](../../../glue42-concepts/application-preferences/javascript/index.html) - manage (store and retrieve) programmatically user preferences for applications.
 
 > ### JavaScript Managing App Definitions at Runtime
 >
