--- a/docs/getting-started/04_changelog/91_3-11/3-11.md
+++ b/docs/getting-started/04_changelog/91_3-11/3-11.md
@@ -52,7 +52,7 @@
 
 > ### JavaScript App Shutdown Event
 >
-> Added a [shutdown hook](../../../glue42-concepts/application-management/javascript/index.html#events-shutdown_event) to the JavaScript Application Management API to enable the execution of custom code before [**Glue42 Enterprise**](https://glue42.com/enterprise/) shuts down.
+> Added a [shutdown hook](../../../glue42-concepts/application-management/javascript/index.html#events-shutdown_event) to the JavaScript App Management API to enable the execution of custom code before [**Glue42 Enterprise**](https://glue42.com/enterprise/) shuts down.
 
 <glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes">
 
