--- a/docs/getting-started/04_changelog/92_3-10/3-10.md
+++ b/docs/getting-started/04_changelog/92_3-10/3-10.md
@@ -29,18 +29,18 @@
 > - [Glue42 .NET 2018.2128.0](https://www.nuget.org/packages/Glue42/)
 > - Glue42 Java 1.3.9
 
-> ### Storing Data in the Application Default Layout
+> ### Storing Data in the App Default Layout
 >
-> Added support for saving custom context data in the Application Default layout using the [`onSaveRequested()`](../../../reference/glue/latest/layouts/index.html#API-onSaveRequested) method of the Layouts API.
+> Added support for saving custom context data in the App Default Layout using the [`onSaveRequested()`](../../../reference/glue/latest/layouts/index.html#API-onSaveRequested) method of the Layouts API.
 >
-> If your application already uses `onSaveRequested()` to store data when a Global layout is saved, you must update your code to check for the [type of the layout](../../../glue42-concepts/windows/layouts/javascript/index.html#layout_types) in the save request (e.g., `"Global"`, `"ApplicationDefault"`, etc.). This is necessary if you want to store data only in a certain type of layout, or if you want to store different data depending on the layout (see the example below). If you don't update your code, the data that your application used to save only when participating in a Global layout, will now also be saved in its Application Default layout if your app is started and closed independently (i.e., not part of a Global layout).
+> If your app already uses `onSaveRequested()` to store data when a Global Layout is saved, you must update your code to check for the [type of the Layout](../../../glue42-concepts/windows/layouts/javascript/index.html#layout_types) in the save request (e.g., `"Global"`, `"ApplicationDefault"`, etc.). This is necessary if you want to store data only in a certain type of Layout, or if you want to store different data depending on the Layout (see the example below). If you don't update your code, the data that your app used to save only when participating in a Global Layout, will now also be saved in its App Default Layout if your app is started and closed independently (i.e., not part of a Global Layout).
 >
 > ```javascript
 > glue.layouts.onSaveRequested((requestInfo) => {
->     // Determine the layout type.
+>     // Determine the Layout type.
 >     const layoutType = requestInfo.layoutType;
 >
->     // Return different context data depending on the layout type.
+>     // Return different context data depending on the Layout type.
 >     if (layoutType === "ApplicationDefault") {
 >         return { windowContext: { gridWidth: 42 } };
 >
@@ -48,7 +48,7 @@
 >         return { windowContext: { gridWidth: 420 } };
 >
 >     } else {
->         // Return if not interested in other layout types.
+>         // Return if not interested in other Layout types.
 >         return;
 >     };
 > });
@@ -80,15 +80,15 @@
 
 > ### Storing Custom Data in App Default Layout
 >
-> Applications can now [store custom data](../../../glue42-concepts/windows/layouts/javascript/index.html#saving_and_updating_context) in the [Application Default layout](../../../glue42-concepts/windows/layouts/overview/index.html).
+> Apps can now [store custom data](../../../glue42-concepts/windows/layouts/javascript/index.html#saving_and_updating_context) in the [App Default Layout](../../../glue42-concepts/windows/layouts/overview/index.html).
 
 > ### Window Title Format
 >
-> The [title format](../../../developers/configuration/system/index.html#application_settings) of Glue42 Windows can now be set through system configuration.
+> The [title format](../../../developers/configuration/system/index.html#app_settings-title_format) of Glue42 Windows can now be set through system configuration.
 
 > ### Grouping Apps
 >
-> Applications can now be [grouped in folders and subfolders](../../../developers/configuration/application/index.html#grouping_applications) in the Application Manager of the Glue42 Toolbar.
+> Apps can now be [grouped in folders and subfolders](../../../developers/configuration/application/index.html#grouping_apps) in the Glue42 Toolbar.
 
 > ### Extending System Configuration
 >
@@ -108,7 +108,7 @@
 
 > ### Java App Shutdown Event
 >
-> Added event listener for [Application Shutdown](../../how-to/glue42-enable-your-app/java/index.html#referencing_and_initialization-application_shutdown) to the Java API.
+> Added event listener for [app shutdown](../../how-to/glue42-enable-your-app/java/index.html#referencing_and_initialization-application_shutdown) to the Java API.
 
 > ### VBA Documentation
 >
