--- a/docs/getting-started/04_changelog/94_3-8/3-8.md
+++ b/docs/getting-started/04_changelog/94_3-8/3-8.md
@@ -36,7 +36,7 @@
 
 <glue42 name="addClass" class="bugFixes" element="p" text="Improvements and Bug Fixes">
 
-> [Application store from a REST service](../../../glue42-concepts/application-management/overview/index.html#application_stores-remote_app_stores) - connection improvements.
+> [App store from a REST service](../../../glue42-concepts/application-management/overview/index.html#app_stores-remote) - connection improvements.
 
 > Improvements in handling windows proportions in maximized groups.
 
