Added docs for Glue42 3.16.

--- a/docs/getting-started/04_changelog/86_3-14/3-14.md
+++ b/docs/getting-started/04_changelog/86_3-14/3-14.md
@@ -111,7 +111,7 @@
 
 > ### Bypassing App Default Layout
 >
-> Using `SHIFT + click` to start an app from the Glue42 Toolbar will [bypass the last saved App Default Layout](../../../glue42-concepts/windows/layouts/overview/index.html#bypassing_app_default_layouts) and will open the app window with the bounds specified in its configuration file.
+> Using `SHIFT + CLICK` to start an app from the Glue42 Toolbar will [bypass the last saved App Default Layout](../../../glue42-concepts/windows/layouts/overview/index.html#bypassing_app_default_layouts) and will open the app window with the bounds specified in its configuration file.
 
 > ### Publishing Metrics with Kafka
 >
