--- a/docs/getting-started/04_changelog/91_3-11/3-11.md
+++ b/docs/getting-started/04_changelog/91_3-11/3-11.md
@@ -28,7 +28,7 @@
 
 > ### Web App Search
 >
-> ["CTRL + F" search feature](../../../glue42-concepts/glue42-platform-features/index.html#web_app_search) added for web apps in Glue42 Windows.
+> [`CTRL + F` search feature](../../../glue42-concepts/glue42-platform-features/index.html#web_app_search) added for web apps in Glue42 Windows.
 >
 > ![Search](../../../images/platform-features/search-document.gif)
 
@@ -38,7 +38,7 @@
 
 > ### Printing Web Pages
 >
-> Web pages can now be printed or saved as PDF files [programmatically](../../../glue42-concepts/windows/window-management/javascript/index.html#window_operations-print) or by [using "CTRL + P"](../../../developers/configuration/system/index.html#window_settings-printing).
+> Web pages can now be printed or saved as PDF files [programmatically](../../../glue42-concepts/windows/window-management/javascript/index.html#window_operations-print) or by [using `CTRL + P`](../../../developers/configuration/system/index.html#window_settings-printing).
 
 > ### JavaScript Window Placement
 >
